# RabbitBench

./: Cargo.toml  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  e2e.yml
cli/src/: api.rs
cli/tests/: cli_e2e.rs
crates/driftwatch-api/: Cargo.toml
crates/driftwatch-api/benches/: cache_bench.rs  serialization_bench.rs
crates/driftwatch-api/migration/: Cargo.toml
crates/driftwatch-api/migration/src/: lib.rs  m20241221_000001_create_driftwatch_tables.rs
crates/driftwatch-api/proto/: auth.proto
crates/driftwatch-api/src/: auth.rs  cache.rs  config.rs  grpc.rs  lib.rs  loaders.rs
crates/driftwatch-api/src/entities/: mod.rs  project.rs
crates/driftwatch-api/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
crates/driftwatch-api/src/graphql/types/: mod.rs  project.rs  threshold.rs
crates/driftwatch-api/tests/: api_e2e_test.rs
crates/driftwatch-api/tests/common/: mod.rs
crates/driftwatch-cli/: Cargo.toml  README.md
crates/driftwatch-cli/src/: api.rs  main.rs
crates/driftwatch-cli/src/adapters/: criterion.rs
crates/driftwatch-cli/src/commands/: auth.rs  config.rs  mod.rs  run.rs
crates/driftwatch-cli/tests/: cli_e2e.rs
server/src/app/: page.tsx
