[package]
name = "driftwatch-api"
version.workspace = true
edition.workspace = true

[lib]
name = "driftwatch_api"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

async-graphql.workspace = true
async-graphql-axum.workspace = true

sea-orm.workspace = true

jsonwebtoken.workspace = true

sha2.workspace = true
hex.workspace = true
moka.workspace = true

migration = { path = "migration" }

[dev-dependencies]
criterion.workspace = true
ctor = "0.2"
fs2 = "0.4"
reqwest.workspace = true
portpicker = "0.1"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
