[package]
name = "driftwatch-api"
version.workspace = true
edition.workspace = true

[lib]
name = "driftwatch_api"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

async-graphql.workspace = true
async-graphql-axum.workspace = true

sea-orm.workspace = true
sea-orm-migration.workspace = true

jsonwebtoken.workspace = true

tsa = { workspace = true, features = ["adapter-seaorm"] }
tsa-core.workspace = true
tsa-adapter-seaorm.workspace = true

tonic.workspace = true
prost.workspace = true

sha2.workspace = true
hex.workspace = true
moka.workspace = true

migration = { path = "migration" }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true
ctor = "0.2"
fs2 = "0.4"
reqwest.workspace = true
portpicker = "0.1"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
