[package]
name = "driftwatch"
version.workspace = true
edition.workspace = true

[[bin]]
name = "driftwatch"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

clap.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
open.workspace = true
tokio-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

tonic.workspace = true
prost.workspace = true
urlencoding.workspace = true

driftwatch-api.workspace = true

[dev-dependencies]
tempfile.workspace = true
